# fastapi-tg-parsers

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: test.py
api/backend/: auth.py  check.py  cities.py  controllers.py  main.py  models.py  news.py  test.py
bot/: main.py  models.py
config_data/: config.py
database/mongo/: __init__.py  connection.py  prepare.py  repository.py  sities.example.py  sities.py  test.py
docker_compose/: Dockerfile  api.yaml  api2.yaml  mongo.yml
parsers/: __init__.py  __main__.py  aksai.py  almata.py  arhangelsk.py  ashhabad.py  astrahan.py  baranovichi.py  base_parser.py  belgorod.py  bishkek.py  brest.py  bryansk.py  chelyabinsk.py  cherepovec.py  chita.py  dnepropetrovsk.py  dushanbe.py  gazeta_tashkent.py  himki.py  inalmaty_almata.py  irkutsk.py  ivanovo.py  kaliningrad.py  karaganda.py  karakol.py  kineshma.py  kirov.py  kishinev.py  kostanai.py  krasnodar.py  krasnoyarsk.py  krim.py  kutaisi.py  magadan.py  magnitogorsk.py  mahachkala.py  mgorod_uralsk.py  minsk.py  moscow.py  (+40 more)
parsers/brazil/: __init__.py  belu.py  cumpinas.py  duki.py  fortaleza.py  guarulios.py  kampu.py  kuritiba.py  rio.py  salvador.py  sangonsalu.py  sanluis.py  sanpaulu.py
parsers/models/: base.py  cities.py  posts.py  request.py
traefik/: docker-compose.traefik.yml  docker-compose.yml  traefik.yml
utils/: blacklist.py  dict_parsers.py  models.py  openai_service.py  text_sevice.py  translate_service.py
utils/exceptions/: api.py  parsers.py  post.py  telegram.py
